fix: masonry on safari [#1982]

--- a/assets/scss/elements/blog/_blogpost-grid.scss
+++ b/assets/scss/elements/blog/_blogpost-grid.scss
@@ -1,3 +1,3 @@
-body:not(.nv-masonry) .layout-grid > .article-content-col, .layout-grid > .article-content-col .content {
-  height: 100%;
+body .layout-grid > .article-content-col, .layout-grid {
+  display: flex;
 }
