--- a/style.css
+++ b/style.css
@@ -1477,8 +1477,8 @@ article {
   }
 }
 
-body:not(.nv-masonry) .layout-grid > .article-content-col, .layout-grid > .article-content-col .content {
-  height: 100%;
+body .layout-grid > .article-content-col, .layout-grid {
+  display: flex;
 }
 
 .layout-default, .layout-alternative {
